--- a/modules/api/Dockerfile
+++ b/modules/api/Dockerfile
@@ -3,10 +3,10 @@ FROM golang:1.24.4 AS builder
 
 WORKDIR /build
 
-COPY modules/common/ ./
-COPY modules/api/ ./
+COPY modules/common/ /build/common/
+COPY modules/api/ /build/api/
 RUN go mod download
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o dashboard-api main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o dashboard-api /build/api/main.go
 
 # 第二阶段：精简运行环境
 FROM alpine:3.20
